More blog post migration

--- a/src/content/blog/2015-09-08-kibana-static-on-aerobatic.mdx
+++ b/src/content/blog/2015-09-08-kibana-static-on-aerobatic.mdx
@@ -8,7 +8,7 @@ description: How to create an ElasticSearch cluster and deploy Kibana Static to 
 tags:
 ---
 
-import MdxImage from '$components/image';
+import MdxImage from '$components/mdx/Image';
 
 ElasticSearch is an awesome open-source project that helps developers index data and make it almost instantly queryable. [Elastic.co](https://www.elastic.co/) is the company behind ElasticSearch as well as a visualization tool called [Kibana](https://www.elastic.co/products/kibana) that is purpose-built to report on top of ElasticSearch indexes.
 
