--- a/src/content/blog/2016-01-15-five-tech-trends-of-a-modern-agency.mdx
+++ b/src/content/blog/2016-01-15-five-tech-trends-of-a-modern-agency.mdx
@@ -6,7 +6,9 @@ date: 2016-01-14
 tags: agencies, static sites, git, continuous delivery
 ---
 
-<img class="img-responsive marketing-feature-showcase--screenshot" src="//www.aerobatic.com/media/blog/agency/agency.png">
+import MdxImage from '$components/mdx/image';
+
+<MdxImage screenshot src="//www.aerobatic.com/media/blog/agency/agency.png" />
 
 Over the past couple of years, we've had the opportunity to work with many digital agencies - some operating globally with major Fortune 50 clients, with others being one or two person firms working with clients locally, and many in between those extremes.
 
