--- a/src/content/blog/2015-11-18-deploy-a-roots-static-site-to-bitbucket.mdx
+++ b/src/content/blog/2015-11-18-deploy-a-roots-static-site-to-bitbucket.mdx
@@ -6,30 +6,32 @@ date: 2015-11-18
 tags: static generator, rootscd
 ---
 
+import MdxImage from '$components/mdx/Image';
+
 [Roots](http://roots.cx/) is a static site generator that's sponsored by the digital agency, [Carrot Creative](http://carrot.is/). Whereas Jekyll is built with Ruby and Hugo is built with Go, Roots is built with NodeJS and comes with support for the [Jade](http://jade-lang.com/) template engine out of the box.
 
 In this post, we'll show you how to build your first Roots static site and deploy it to Aerobatic using Bitbucket.
 
 ## 1) Install roots
 
-{% highlight bash linenos %}
+```sh
 npm i roots -g
-{% endhighlight %}
+```
 
 ## 2) Create new project
 
 Replace `roots-demo` with whatever you want to call your project. The
 
-{% highlight bash linenos %}
+```sh
 roots new roots-demo
-{% endhighlight %}
+```
 
 ## 3) Build your site
 
-{% highlight bash linenos %}
+```sh
 cd roots-demo
 roots watch
-{% endhighlight %}
+```
 
 Your site will now be live at `http://localhost:1111/` and your site's directory structure will look something like:
 
@@ -45,7 +47,7 @@ Once you've done that, go ahead and push this repo to Bitbucket either from the 
 
 Assuming you've already [installed](/splash) the Aerobatic add-on for Bitbucket, go ahead and link your Roots repo to Aerobatic like so:
 
-<img class="img-responsive marketing-feature-showcase--screenshot" src="//www.aerobatic.com/media/blog/rootscx/link-repo.png" alt="Screenshot of deploying a roots site to Aerobatic">
+<MdxImage screenshot src="//www.aerobatic.com/media/blog/rootscx/link-repo.png" alt="Screenshot of deploying a roots site to Aerobatic" />
 
 ## Summary
 
