Starting on docs migration

--- a/src/content/blog/2017-04-13-deploy-hugo-to-aerobatic-with-shippable.mdx
+++ b/src/content/blog/2017-04-13-deploy-hugo-to-aerobatic-with-shippable.mdx
@@ -6,6 +6,8 @@ tags: shippable, github, cd, deploy
 slug: aerobatic-shippable
 ---
 
+import Cli from '$components/mdx/Cli';
+
 _This post originally appeared as a guest post on the [Shippable blog](http://blog.shippable.com/deploy-a-hugo-site-to-aerobatic-with-shippable)_
 
 [Aerobatic](https://www.aerobatic.com/) is a web publishing service built specifically for static generators and modern web apps. Using the Aerobatic Command Line Interface (CLI), front-end developers can deploy their sites to the Aerobatic Global Content Delivery Network (CDN) in a matter of seconds.
