--- a/src/content/blog/2018-04-10-scoring-an-a-grade-in-mozilla-observatory.mdx
+++ b/src/content/blog/2018-04-10-scoring-an-a-grade-in-mozilla-observatory.mdx
@@ -5,6 +5,7 @@ date: 2018-04-10
 slug: scoring-an-a-grade-in-mozilla-observatory
 ---
 
+import MdxImage from '$components/mdx/Image';
 import Cli from '$components/mdx/Cli';
 
 I recently learned about [Mozilla Observatory](https://observatory.mozilla.org/) security site scanner. It examines your markup and HTML headers and scores your site with a letter grade. I was a bit chagrined to see our https://www.aerobatic.com receive a failing F grade 😞. As a web company promoting best practices we should do better, time to hit the books and improve that mark.
