--- a/src/content/blog/2016-04-27-gatsbyjs.mdx
+++ b/src/content/blog/2016-04-27-gatsbyjs.mdx
@@ -8,6 +8,7 @@ tags: gatsby, react, static site generator, javascript
 ---
 
 import MdxImage from '$components/mdx/Image';
+import Cli from '$components/mdx/Cli';
 
 Gatsby transforms plain text into dynamic blogs and websites using the latest web technologies. It's easy to get started with — and host on Aerobatic. I'll go over why you should consider it, and how to get it up and running quickly with Aerobatic.
 
