--- a/src/content/blog/2017-02-10-aerobatic-optimized-docker-build-images.mdx
+++ b/src/content/blog/2017-02-10-aerobatic-optimized-docker-build-images.mdx
@@ -6,6 +6,8 @@ date: 2017-02-10
 tags: docker, hugo, jekyll, cd, bitbucket pipelines
 ---
 
+import MdxImage from '$components/mdx/Image';
+
 <MdxImage
   align="center"
   src="//www.aerobatic.com/media/logos/docker-logo.png"
