--- a/src/content/blog/2017-04-13-deploy-hugo-to-aerobatic-with-shippable.mdx
+++ b/src/content/blog/2017-04-13-deploy-hugo-to-aerobatic-with-shippable.mdx
@@ -7,6 +7,7 @@ slug: aerobatic-shippable
 ---
 
 import Cli from '$components/mdx/Cli';
+import MdxImage from '$components/mdx/Image';
 
 _This post originally appeared as a guest post on the [Shippable blog](http://blog.shippable.com/deploy-a-hugo-site-to-aerobatic-with-shippable)_
 
