--- a/src/content/docs/access-control.mdx
+++ b/src/content/docs/access-control.mdx
@@ -25,7 +25,7 @@ You can lock your website down so that it is only accessible to specific IP rang
 
 The IP range is set using the CLI [clientip](/docs/cli/#clientip) command. For example, say you want to restrict access to clients with IPs between `97.113.60.20` and `97.113.60.40`. Input those values into the converter above, and the following CIDR values are returned: `97.113.60.20/30`, `97.113.60.24/29`,`97.113.60.32/28`, `97.113.60.40/32`. Then use the following CLI command to set the ranges:
 
-<Cli>aero clientip --value \"97.113.60.20/30,97.113.60.24/29,97.113.60.32/29,97.113.60.40/32\"</Cli>
+<Cli>aero clientip --value "97.113.60.20/30,97.113.60.24/29,97.113.60.32/29,97.113.60.40/32"</Cli>
 
 Using this command you can change the ranges, or remove the IP restrictions at any time without having to re-deploy your site. It takes at most 30 seconds from the time you issue to the command to when it starts to take effect.
 
