Pricing and features on homepage

--- a/src/content/docs/access-control.mdx
+++ b/src/content/docs/access-control.mdx
@@ -8,7 +8,7 @@ import Image from '$components/mdx/Image';
 import Cli from '$components/mdx/Cli';
 import Alert from '$components/mdx/Alert';
 
-<Image src="/img/access-control-icon.png" style={{ float: 'right' }} />
+<Image src="/img/access-control-icon.png" style={{ float: 'right' }} width={233} height={207} />
 
 Not all websites are intended to be accessible to the general public. Aerobatic specializes in providing you a choice of robust solutions for locking down your site to authorized users only.
 
