--- a/src/content/docs/custom-domains-ssl.mdx
+++ b/src/content/docs/custom-domains-ssl.mdx
@@ -8,7 +8,7 @@ import Cli from '$components/mdx/Cli';
 import MdxImage from '$components/mdx/Image';
 import Alert from '$components/mdx/Alert';
 
-Once your site is upgraded to the paid plan, you can configure your site to be served on a custom domain. Aerobatic will provision a wildcard SSL certificate for your domain using the [AWS Certificate Manager](https://aws.amazon.com/certificate-manager/). Wildcard certificates cover your apex, aka "naked", domain and all subdomains. This allows you to cover all your [deploy stages](/docs/overview#deploy-stages) using the same certificate, for example:
+Once your site is upgraded to the paid plan, you can configure your site to be served on a custom domain. Aerobatic will provision a wildcard SSL certificate for your domain using the [AWS Certificate Manager](https://aws.amazon.com/certificate-manager/). Wildcard certificates cover your apex, aka "naked", domain and all subdomains. This allows you to cover all your [deploy stages](/docs/deployment#deploy-stages) using the same certificate, for example:
 
 - `https://www.mydomain.com`
 - `https://www--test.mydomain.com`
