--- a/src/content/docs/overview.mdx
+++ b/src/content/docs/overview.mdx
@@ -12,7 +12,12 @@ Aerobatic is a specialized platform for efficient delivery of static webpages an
 
 Aerobatic utilizes a multi-layered global CDN so no matter where in the world your website visitors come from, the request is routed to the lowest latency servers. Website requests are initially routed to the optimal [AWS CloudFront edge node](https://aws.amazon.com/cloudfront/details/) (located throughout the world). Many assets such as images, JavaScripts, stylesheets, etc. are delivered directly from CloudFront. Your webpage requests are passed along to the lowest latency Aerobatic origin server (currently Oregon or Frankfurt, Germany with plans to expand to other regions). All resources are served with [optimal caching headers](/docs/static-serving#cache-headers) by default.
 
-<MdxImage src="https://www.aerobatic.com/media/docs/cdn-world-map.png" alt="CDN World Map" />
+<MdxImage
+  src="https://www.aerobatic.com/media/docs/cdn-world-map.png"
+  alt="CDN World Map"
+  width={848}
+  height={471}
+/>
 
 <Alert type="tip">
 
